Added support in construct for parsing hex data as user-defined struct. I added a tab named "construct" in data_types.ui. A script that defines a struct can be openned when clicking on "Load construct". The file will be in a structure of "Struct(...)" without any import. This will be handled later, and a safe load (because "eval" can load a malicious code).

--- a/modules/data_types.ui
+++ b/modules/data_types.ui
@@ -158,6 +158,44 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="tab_construct">
+      <attribute name="title">
+       <string>Construct</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QTextEdit" name="txtConstruct">
+        </widget>
+       </item>
+       <item>
+        <widget class="QCommandLinkButton" name="btnLoadConstruct">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>Load construct</string>
+         </property>
+         </widget>
+       </item>
+       <item>
+        <widget class="QCommandLinkButton" name="btnApplyConstruct">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>Apply</string>
+         </property>
+         </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_construct_filename">
+         <property name="text">
+          <string>No construct script selected</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
      <widget class="QWidget" name="tab_dates">
       <attribute name="title">
        <string>Dates</string>
@@ -194,10 +232,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="hexEdit">
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
+      <widget class="QPlainTextEdit" name="hexEdit">
       </widget>
      </item>
     </layout>
