Added selection feature in construct. Temporary removed edit feature in the construct due to changing of widget

--- a/modules/data_types.ui
+++ b/modules/data_types.ui
@@ -164,7 +164,7 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QTextEdit" name="txtConstruct">
+        <widget class="QListWidget" name="lstConstruct">
         </widget>
        </item>
        <item>
